ansible_scripts/roles/install_apps/edgenius/data-api/files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: edgenius
  name: dataapi
  labels:
    app: dataapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataapi
  template:
    metadata:
      labels:
        app: dataapi
    spec:
      containers:
        - name: dataapi
          image: griffins.azurecr.io/edge-demo-data-api:1.0.54
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: griffinsreg
