ansible_scripts/roles/install_apps/edgenius/data-api/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dataapi
  namespace: edgenius
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /dataapi(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: dataapi
              port:
                number: 80
